--- a/src/movielens-recommender.ipynb
+++ b/src/movielens-recommender.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/ratings.csv')"
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "   userId  movieId  rating   timestamp\n0       1       31     2.5  1260759144\n1       1     1029     3.0  1260759179\n2       1     1061     3.0  1260759182\n3       1     1129     2.0  1260759185\n4       1     1172     4.0  1260759205",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>userId</th>\n      <th>movieId</th>\n      <th>rating</th>\n      <th>timestamp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>31</td>\n      <td>2.5</td>\n      <td>1260759144</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1029</td>\n      <td>3.0</td>\n      <td>1260759179</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>1061</td>\n      <td>3.0</td>\n      <td>1260759182</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>1129</td>\n      <td>2.0</td>\n      <td>1260759185</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>1172</td>\n      <td>4.0</td>\n      <td>1260759205</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "(100004, 4)"
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -220,14 +220,26 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Classic Collaborative Filtering"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "class ColabDataset(Dataset):\n",
     "    def __init__(self, dataframe, device):\n",
     "        self.x = torch.tensor(dataframe.iloc[:, :2].values, dtype=torch.int, device=device)\n",
-    "        self.y = torch.tensor(dataframe.iloc[:, 2].values, dtype=torch.int, device=device)\n",
+    "        self.y = torch.tensor(dataframe.iloc[:, 2].values, dtype=torch.float, device=device)\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.y)\n",
@@ -244,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "class Recommender(nn.Module):\n",
@@ -254,14 +266,14 @@
     "        self.user_bias = nn.Embedding(n_users, 1)\n",
     "        self.movie_embedding = nn.Embedding(n_movies, emb_size)\n",
     "        self.movie_bias = nn.Embedding(n_movies, 1)\n",
-    "        self.y_range = y_range\n",
+    "        self.y_range = torch.tensor([[y_range]], dtype=torch.float)\n",
     "\n",
     "    def forward(self, x):\n",
     "        users = self.user_embedding(x[:, 0])\n",
     "        movies = self.movie_embedding(x[:, 1])\n",
     "        result = (users * movies).sum(dim=1, keepdim=True)\n",
     "        result += result + self.user_bias(x[:, 0]) + self.movie_bias(x[:, 1])\n",
-    "        return result"
+    "        return result.clip(min=y_range[0], max=y_range[1])"
    ],
    "metadata": {
     "collapsed": false,
@@ -272,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "def train_model(model, loader, epochs, optimizer,):\n",
@@ -282,7 +294,7 @@
     "        for x, y in loader:\n",
     "            y_hat = model(x)\n",
     "            optimizer.zero_grad()\n",
-    "            loss = nn.functional.mse_loss(y_hat, y)\n",
+    "            loss = nn.functional.mse_loss(y_hat, y.unsqueeze(1))\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "        print(f\"Loss obtained: {loss.item()}\")"
@@ -296,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "def get_results(model, loader, device):\n",
     "    global_loss = torch.tensor(0.0, dtype=torch.float, device=device)\n",
     "    for x, y in loader:\n",
     "        y_hat = model(x)\n",
-    "        loss = nn.functional.mse_loss(y_hat, y)\n",
+    "        loss = nn.functional.mse_loss(y_hat, y.unsqueeze(1))\n",
     "        global_loss = global_loss + loss\n",
     "    print(f\"Global Loss obtained: {global_loss}\")\n",
     "    return global_loss"
@@ -317,10 +329,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "outputs": [],
    "source": [
-    "device = 'mps' if torch.has_mps else 'cpu'\n",
+    "device = 'cpu'\n",
     "learning_rate = 0.001\n",
     "batch_size = 256"
    ],
@@ -356,17 +368,17 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 10,
+   "execution_count": 60,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 64,
    "outputs": [],
    "source": [
-    "n_users = df_train.userId.max() + 1\n",
-    "n_movies = df_train.movieId.max() + 1\n",
-    "emb_size = 200\n",
+    "n_users = df.userId.max() + 1\n",
+    "n_movies = df.movieId.max() + 1\n",
+    "emb_size = 50\n",
     "y_range = (0.5, 5)\n",
     "\n",
     "model = Recommender(n_users, n_movies, emb_size, y_range)\n",
@@ -381,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "optimizer = optim.Adam(model.parameters(), learning_rate)"
@@ -395,24 +407,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting epoch 0...\n"
+      "Starting epoch 0...\n",
+      "Loss obtained: 6.516875267028809\n",
+      "Starting epoch 1...\n",
+      "Loss obtained: 6.089211463928223\n",
+      "Starting epoch 2...\n",
+      "Loss obtained: 6.02811336517334\n",
+      "Starting epoch 3...\n",
+      "Loss obtained: 6.019745349884033\n",
+      "Starting epoch 4...\n",
+      "Loss obtained: 6.029871463775635\n",
+      "Starting epoch 5...\n",
+      "Loss obtained: 6.049020767211914\n",
+      "Starting epoch 6...\n",
+      "Loss obtained: 6.056064605712891\n",
+      "Starting epoch 7...\n",
+      "Loss obtained: 5.980310916900635\n",
+      "Starting epoch 8...\n",
+      "Loss obtained: 5.972567558288574\n",
+      "Starting epoch 9...\n",
+      "Loss obtained: 5.830332279205322\n"
      ]
     }
    ],
    "source": [
-    "train_model(model, train_loader, 2, optimizer)"
+    "train_model(model, train_loader, 10, optimizer)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Global Loss obtained: 553.5663452148438\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss = get_results(model, test_loader, device)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(tensor([ 359, 1295], dtype=torch.int32), tensor(4.5000))"
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_loader.dataset[1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: tensor([[0.5000]], grad_fn=<ClampBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = model(torch.tensor([[359, 1295]]))\n",
+    "print(f\"Prediction: {preds}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -420,9 +518,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "loss = get_results(model, test_loader, device)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
