--- a/src/movielens-recommender.ipynb
+++ b/src/movielens-recommender.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/ratings.csv')"
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "   userId  movieId  rating   timestamp\n0       1       31     2.5  1260759144\n1       1     1029     3.0  1260759179\n2       1     1061     3.0  1260759182\n3       1     1129     2.0  1260759185\n4       1     1172     4.0  1260759205",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>userId</th>\n      <th>movieId</th>\n      <th>rating</th>\n      <th>timestamp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>31</td>\n      <td>2.5</td>\n      <td>1260759144</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1029</td>\n      <td>3.0</td>\n      <td>1260759179</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>1061</td>\n      <td>3.0</td>\n      <td>1260759182</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>1129</td>\n      <td>2.0</td>\n      <td>1260759185</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>1172</td>\n      <td>4.0</td>\n      <td>1260759205</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "(100004, 4)"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "class ColabDataset(Dataset):\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "class Recommender(nn.Module):\n",
@@ -284,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "outputs": [],
    "source": [
-    "def train_model(model, loader, epochs, optimizer,):\n",
+    "def train_model(model, loader, epochs, optimizer, criterion):\n",
     "    model.train()\n",
     "    for i in range(epochs):\n",
     "        print(f\"Starting epoch {i}...\")\n",
     "        for x, y in loader:\n",
     "            y_hat = model(x)\n",
     "            optimizer.zero_grad()\n",
-    "            loss = nn.functional.mse_loss(y_hat, y.unsqueeze(1))\n",
+    "            loss = criterion(y_hat, y.unsqueeze(1))\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "        print(f\"Loss obtained: {loss.item()}\")"
@@ -308,17 +308,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "outputs": [],
    "source": [
-    "def get_results(model, loader, device):\n",
-    "    global_loss = torch.tensor(0.0, dtype=torch.float, device=device)\n",
+    "def get_results(model, loader, criterion):\n",
     "    for x, y in loader:\n",
     "        y_hat = model(x)\n",
-    "        loss = nn.functional.mse_loss(y_hat, y.unsqueeze(1))\n",
-    "        global_loss = global_loss + loss\n",
-    "    print(f\"Global Loss obtained: {global_loss}\")\n",
-    "    return global_loss"
+    "        loss = criterion(y_hat, y.unsqueeze(1))\n",
+    "    print(f\"Loss obtained: {loss}\")\n",
+    "    return loss"
    ],
    "metadata": {
     "collapsed": false,
@@ -329,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "device = 'cpu'\n",
@@ -368,12 +366,12 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 60,
+   "execution_count": 13,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "n_users = df.userId.max() + 1\n",
@@ -393,10 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "outputs": [],
    "source": [
-    "optimizer = optim.Adam(model.parameters(), learning_rate)"
+    "optimizer = optim.Adam(model.parameters(), learning_rate)\n",
+    "criterion = nn.MSELoss()"
    ],
    "metadata": {
     "collapsed": false,
@@ -407,37 +406,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Starting epoch 0...\n",
-      "Loss obtained: 6.516875267028809\n",
+      "Loss obtained: 7.325753211975098\n",
       "Starting epoch 1...\n",
-      "Loss obtained: 6.089211463928223\n",
+      "Loss obtained: 7.0859785079956055\n",
       "Starting epoch 2...\n",
-      "Loss obtained: 6.02811336517334\n",
+      "Loss obtained: 7.035270690917969\n",
       "Starting epoch 3...\n",
-      "Loss obtained: 6.019745349884033\n",
+      "Loss obtained: 7.01871919631958\n",
       "Starting epoch 4...\n",
-      "Loss obtained: 6.029871463775635\n",
+      "Loss obtained: 7.005351543426514\n",
       "Starting epoch 5...\n",
-      "Loss obtained: 6.049020767211914\n",
+      "Loss obtained: 7.0097856521606445\n",
       "Starting epoch 6...\n",
-      "Loss obtained: 6.056064605712891\n",
+      "Loss obtained: 7.026294708251953\n",
       "Starting epoch 7...\n",
-      "Loss obtained: 5.980310916900635\n",
+      "Loss obtained: 7.057973384857178\n",
       "Starting epoch 8...\n",
-      "Loss obtained: 5.972567558288574\n",
+      "Loss obtained: 7.050586700439453\n",
       "Starting epoch 9...\n",
-      "Loss obtained: 5.830332279205322\n"
+      "Loss obtained: 7.040704727172852\n"
      ]
     }
    ],
    "source": [
-    "train_model(model, train_loader, 10, optimizer)"
+    "train_model(model, train_loader, 25, optimizer, criterion)"
    ],
    "metadata": {
     "collapsed": false,
@@ -448,18 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Global Loss obtained: 553.5663452148438\n"
+      "Global Loss obtained: 7.813762187957764\n"
      ]
     }
    ],
    "source": [
-    "test_loss = get_results(model, test_loader, device)"
+    "test_loss = get_results(model, test_loader, criterion)"
    ],
    "metadata": {
     "collapsed": false,
@@ -469,56 +468,154 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 70,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(tensor([ 359, 1295], dtype=torch.int32), tensor(4.5000))"
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "test_loader.dataset[1]"
+    "### Feed-Forward Collaborative Network"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prediction: tensor([[0.5000]], grad_fn=<ClampBackward1>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "preds = model(torch.tensor([[359, 1295]]))\n",
-    "print(f\"Prediction: {preds}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "outputs": [],
-   "source": [],
+   "source": [
+    "class FFRecommender(nn.Module):\n",
+    "    def __init__(self, n_users, n_movies, emb_size, n_units, dropout, y_range):\n",
+    "        super(FFRecommender, self).__init__()\n",
+    "        self.user_embedding = nn.Embedding(n_users, emb_size)\n",
+    "        self.movie_embedding = nn.Embedding(n_movies, emb_size)\n",
+    "        self.linear1 = nn.Linear(emb_size * 2, n_units)\n",
+    "        self.linear2 = nn.Linear(n_units, 1)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.y_range = torch.tensor([[y_range]], dtype=torch.float)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        users = self.user_embedding(x[:, 0])\n",
+    "        movies = self.movie_embedding(x[:, 1])\n",
+    "        h1 = nn.functional.relu(self.linear1(torch.cat([users, movies], 1)))\n",
+    "        h1 = self.dropout(h1)\n",
+    "        result = self.linear2(h1)\n",
+    "        return result.clip(min=y_range[0], max=y_range[1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "n_units = 100\n",
+    "dropout = 0.2\n",
+    "\n",
+    "ff_model = FFRecommender(n_users, n_movies, emb_size, n_units, dropout, y_range)\n",
+    "ff_model = ff_model.to(device)\n",
+    "\n",
+    "optimizer = optim.Adam(ff_model.parameters(), learning_rate)\n",
+    "criterion = nn.MSELoss()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0...\n",
+      "Loss obtained: 1.5955442190170288\n",
+      "Starting epoch 1...\n",
+      "Loss obtained: 1.5499167442321777\n",
+      "Starting epoch 2...\n",
+      "Loss obtained: 1.2634353637695312\n",
+      "Starting epoch 3...\n",
+      "Loss obtained: 1.1901389360427856\n",
+      "Starting epoch 4...\n",
+      "Loss obtained: 1.2445697784423828\n",
+      "Starting epoch 5...\n",
+      "Loss obtained: 1.01384437084198\n",
+      "Starting epoch 6...\n",
+      "Loss obtained: 0.9811345338821411\n",
+      "Starting epoch 7...\n",
+      "Loss obtained: 0.9718248248100281\n",
+      "Starting epoch 8...\n",
+      "Loss obtained: 1.0227289199829102\n",
+      "Starting epoch 9...\n",
+      "Loss obtained: 0.9316130876541138\n",
+      "Starting epoch 10...\n",
+      "Loss obtained: 0.8406617641448975\n",
+      "Starting epoch 11...\n",
+      "Loss obtained: 0.8861462473869324\n",
+      "Starting epoch 12...\n",
+      "Loss obtained: 0.8151577711105347\n",
+      "Starting epoch 13...\n",
+      "Loss obtained: 0.8097875118255615\n",
+      "Starting epoch 14...\n",
+      "Loss obtained: 0.735407292842865\n",
+      "Starting epoch 15...\n",
+      "Loss obtained: 0.7782204151153564\n",
+      "Starting epoch 16...\n",
+      "Loss obtained: 0.7488981485366821\n",
+      "Starting epoch 17...\n",
+      "Loss obtained: 0.7999669313430786\n",
+      "Starting epoch 18...\n",
+      "Loss obtained: 0.7178509831428528\n",
+      "Starting epoch 19...\n",
+      "Loss obtained: 0.808002769947052\n",
+      "Starting epoch 20...\n",
+      "Loss obtained: 0.7779560685157776\n",
+      "Starting epoch 21...\n",
+      "Loss obtained: 0.7770968675613403\n",
+      "Starting epoch 22...\n",
+      "Loss obtained: 0.7517359852790833\n",
+      "Starting epoch 23...\n",
+      "Loss obtained: 0.7358230948448181\n",
+      "Starting epoch 24...\n",
+      "Loss obtained: 0.6766632199287415\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_model(ff_model, train_loader, 25, optimizer, criterion)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Global Loss obtained: 0.9601640105247498\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss = get_results(ff_model, test_loader, criterion)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
