Adding Sequential Recommender

--- a/src/movielens-recommender.ipynb
+++ b/src/movielens-recommender.ipynb
@@ -29,7 +29,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/josualonso/miniforge3/envs/torch-gpu/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def train_model(model, loader, epochs, optimizer, criterion):\n",
@@ -308,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def get_results(model, loader, criterion):\n",
@@ -371,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "n_users = df.userId.max() + 1\n",
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "optimizer = optim.Adam(model.parameters(), learning_rate)\n",
@@ -615,6 +624,169 @@
    ],
    "source": [
     "test_loss = get_results(ff_model, test_loader, criterion)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Sequential Model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "sequences = []\n",
+    "for userId in df_train.userId.unique():\n",
+    "    df_filtered = df[df['userId'] == userId].sort_values(by='timestamp')\n",
+    "    user_sequence = (df_filtered['movieId'].values[:10], df_filtered['rating'].values[:10])\n",
+    "    sequences.append(user_sequence)\n",
+    "\n",
+    "cutoff_index = int(len(sequences) * 0.8)\n",
+    "sequences_train, sequences_test = sequences[:cutoff_index], sequences[cutoff_index:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class SeqRecommender(nn.Module):\n",
+    "    def __init__(self, embedding_dim, hidden_dim, num_items, num_output):\n",
+    "        super().__init__()\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.item_embeddings = nn.Embedding(num_items, embedding_dim)\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim)\n",
+    "        self.linear = nn.Linear(hidden_dim, num_output)\n",
+    "        self.hidden = self.init_hidden()\n",
+    "\n",
+    "    def init_hidden(self):\n",
+    "        # initialize both hidden layers\n",
+    "        return (torch.autograd.Variable(torch.zeros(1, 1, self.hidden_dim)),\n",
+    "                torch.autograd.Variable(torch.zeros(1, 1, self.hidden_dim)))\n",
+    "\n",
+    "    def forward(self, sequence):\n",
+    "        embeddings = self.item_embeddings(sequence)\n",
+    "        output, self.hidden = self.lstm(embeddings.view(len(sequence), 1, -1),\n",
+    "                                        self.hidden)\n",
+    "        rating_scores = self.linear(output.view(len(sequence), -1))\n",
+    "        return rating_scores\n",
+    "\n",
+    "    def predict(self, sequence):\n",
+    "        rating_scores = self.forward(sequence)\n",
+    "        return rating_scores"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss obtained on epoch 1: 1.6120145320892334\n",
+      "Loss obtained on epoch 2: 1.4184951782226562\n",
+      "Loss obtained on epoch 3: 1.17024827003479\n",
+      "Loss obtained on epoch 4: 1.0041344165802002\n",
+      "Loss obtained on epoch 5: 0.9770200848579407\n",
+      "Loss obtained on epoch 6: 1.0121451616287231\n",
+      "Loss obtained on epoch 7: 1.1190639734268188\n",
+      "Loss obtained on epoch 8: 1.2192742824554443\n",
+      "Loss obtained on epoch 9: 1.2514474391937256\n",
+      "Loss obtained on epoch 10: 1.2087265253067017\n",
+      "Loss obtained on epoch 11: 1.154654860496521\n",
+      "Loss obtained on epoch 12: 1.0692048072814941\n",
+      "Loss obtained on epoch 13: 1.0285985469818115\n",
+      "Loss obtained on epoch 14: 0.9221988916397095\n",
+      "Loss obtained on epoch 15: 0.8521041870117188\n",
+      "Loss obtained on epoch 16: 0.7930628061294556\n",
+      "Loss obtained on epoch 17: 0.7057464718818665\n",
+      "Loss obtained on epoch 18: 0.7401238083839417\n",
+      "Loss obtained on epoch 19: 0.5769805312156677\n",
+      "Loss obtained on epoch 20: 0.5559548735618591\n",
+      "Loss obtained on epoch 21: 0.4918745458126068\n",
+      "Loss obtained on epoch 22: 0.4267632067203522\n",
+      "Loss obtained on epoch 23: 0.3409455418586731\n",
+      "Loss obtained on epoch 24: 0.40252986550331116\n",
+      "Loss obtained on epoch 25: 0.2885831296443939\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_units_lstm = 30\n",
+    "\n",
+    "seq_model = SeqRecommender(emb_size, n_units_lstm, n_movies, 1)\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(seq_model.parameters(), learning_rate)\n",
+    "\n",
+    "seq_model.train()\n",
+    "for epoch in range(25):\n",
+    "    for sequence, target_ratings in sequences_train:\n",
+    "        seq_model.zero_grad()\n",
+    "        # initialize hidden layers\n",
+    "        seq_model.hidden = seq_model.init_hidden()\n",
+    "        # convert sequence to PyTorch variables\n",
+    "        sequence_var = torch.autograd.Variable(torch.LongTensor(sequence.astype('int64')))\n",
+    "        # forward pass\n",
+    "        ratings_scores = seq_model(sequence_var)\n",
+    "        target_ratings_var = torch.autograd.Variable(torch.FloatTensor(target_ratings.astype('float32')))\n",
+    "        # compute loss\n",
+    "        loss = criterion(ratings_scores, target_ratings_var.view(10, 1))\n",
+    "        # backpropagate\n",
+    "        loss.backward(retain_graph=True)\n",
+    "        # update weights\n",
+    "        optimizer.step()\n",
+    "    print(f\"Loss obtained on epoch {epoch+1}: {loss.item()}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss obtained: 0.7846352458000183\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sequence, target_ratings in sequences_test:\n",
+    "    sequence_var = torch.autograd.Variable(torch.LongTensor(sequence.astype('int64')))\n",
+    "    ratings_scores = seq_model(sequence_var)\n",
+    "    target_ratings_var = torch.autograd.Variable(torch.FloatTensor(target_ratings.astype('float32')))\n",
+    "    loss = criterion(ratings_scores, target_ratings_var.view(10, 1))\n",
+    "print(f\"Loss obtained: {loss}\")"
    ],
    "metadata": {
     "collapsed": false,
