--- a/src/movielens-recommender.ipynb
+++ b/src/movielens-recommender.ipynb
@@ -68,6 +68,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The first step in every data problem should be pouring the data in our environment so we can work with it. In this case, as the data comes in a CSV file, we will be using `pandas` to load the dataset as a DataFrame object."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "outputs": [],
@@ -134,6 +146,15 @@
     "## Data Analysis"
    ],
    "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Right after loading our data, we can take a look at its form and the patterns that lie underneath. In this case, given the tabular form of the data, we can start by looking at the distribution of the target variable:"
+   ],
+   "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
@@ -167,6 +188,20 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "It's easy to detect that the mode of the distribution is 4, and it is also the median. Looking at the distribution closely, we see that very low values (such as 0.5 or 1) are highlighted as outliers in the boxplot given its low rate of appearance, which combined with the previous fact shows that most movies are categorized are good but not excellent (between 3 and 4 stars).\n",
+    "\n",
+    "To deep dive in our analysis of the distribution of the targe variable, we can also check the distributions of the mean rating by user and movie:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -219,6 +254,20 @@
   {
    "cell_type": "markdown",
    "source": [
+    "The first thing that we can observe easily in these plots is that the number of ratings per user and movie is not normally distributed, having both distributions highly pronounced skewness which makes extremely low values the most popular range while high values are scarce but existent. This fact means that most users do not rate more than a couple of dozens or movies while some of them rate more than 2000, and most movies do not receive more than a handful of reviews while some others receive more than 300.\n",
+    "\n",
+    "By analyzing the distributions per user and movie of the ratings, we may also highlight that the insights that we gain on the previous step is confirmed and reviewers tend to rate movies at around 4 stars, being the 25-75 percentile range between 3.5 and 4 approximately. Movies, on the other hand, have a lower 25-75 percentile range, and their distribution has a higher deviation, which may lead to us thinking that there are more bad movies that negative reviewers."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Modelling"
    ],
    "metadata": {
@@ -232,6 +281,18 @@
    "cell_type": "markdown",
    "source": [
     "### Classic Collaborative Filtering"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We start our modelling by proposing possibly the most classic recommendation system, the Collaborative Filtering. This model is based on the inference of $K$ latent features of our items and the allocation of values inside those features for each movie. At the same time, each user gets a vector of the same dimensions allocated to them, so we can see their preferences corresponding to given features and, thus, select the items which corresponds more to that user."
    ],
    "metadata": {
     "collapsed": false,
@@ -479,6 +540,18 @@
   {
    "cell_type": "markdown",
    "source": [
+    "The loss obtained is huge, with 7.81 of RMSE, which implies a deviation of more than 2.5 points on average on the reviews predicted. The simplicity of this model provided a minimum score to beat, and we now may use the deep on deep learning to develop more complicated relationships in our model that might lead us to a better allocation and use of our item's latent factors."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Feed-Forward Collaborative Network"
    ],
    "metadata": {
@@ -635,10 +708,38 @@
   {
    "cell_type": "markdown",
    "source": [
+    "This is far better! This time the mean deviation went down to less than 1 unit per review, with an improvement on RMSE of more than 7x. The latent factors retrieved at the `Embedding` layers can be used to compare similar movies now, and even to clusterize some of them or use a dimensionality reduction technique such a T-SNE to plot the vectorial space and gain insights on similarities among the catalog.\n",
+    "\n",
+    "In the classic use case, given a user X we could predict the rating for each movie that this user is expected to give, and thus recommend the movie with a higher rating (using a `softmax` activation) that the user has not already reviewed at a particular timestamp."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Sequential Model"
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Even though our model already gave us a decent score, we can see if we can simplify our model by not looking at users but instead focusing on sequences of item reviews. This approach uses the $N$ first reviews of each user as a sequence to predict the rating on the next item, and, thus, select the item which expects a higher rating at that particular step.\n",
+    "\n",
+    "The beauty of this model is that it doesn't only take into account the preferences of a particular user, but also put an emphasis on the order of the sequence, which may lead us not to recommend too many similar movies to the same user not to saturate the user and therefore provoke a bad review."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -793,6 +894,17 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This model gives us a slightly better score than the previous one, receiving a 0.7846 RMSE. This little of a difference can be due to luck itself, so in a productive environment we should check both models with A/B tests or systems of the sort to test our hypothesis and get empirical evidence of the superiority of our last model.\n",
+    "\n",
+    "Nevertheless, imagining that these results are tested, we could then select which movie to recommend to every user at a particular step of their journey in our platform, which could indeed increase engagement and the subscription turnover by maximizing the satisfaction of our users given a finite catalog of items and a hypothetical optimal sequence of recommendations per user."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
